--- a/_partials/_pages/_home.scss
+++ b/_partials/_pages/_home.scss
@@ -138,13 +138,13 @@
       h2 {
         margin-top: 10%;
         font-weight: 400;
-        color: $white;
+        color: $black;
         font-size: 3.5rem;
       }
       p {
         margin: 10% 0;
         font-size: 1.5rem;
-        color: $white;
+        color: $black;
         img {
           margin-right: 15px;
         }
@@ -161,8 +161,7 @@
       grid-template-rows: 1fr 1fr;
       gap: 30px;
       img{
-        width: 100%;
-        height: auto;
+        max-width: 100%;
         object-fit: cover;  
       }
     }
@@ -170,8 +169,9 @@
   // espaco
 
   .depoimentos {
+    padding: 10vh 0;
     .depoimentos-slider{
-      margin-top: 5vh 0 5vh 0;
+      margin-top: 10vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -184,18 +184,19 @@
           display: flex;
           flex-direction: row;
           img{
+            width: 40px;
             height: 30px;
-            margin-right: 10px;
+            margin-right: 30px;
           }
         }
         .depoimento-card-autor{
-          text-align: center;
+          margin-left: 70px;
           &::before{
             content: "";
             display: inline-block;
             position: static;
             margin: 0px 10px 5px 0px;
-            width: 50px;
+            width:  20%;
             height: 5px;
             background-color: $secondary;
           }
@@ -406,32 +407,39 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
       }
       #espaco-wrapper {
         grid-template-rows: 1fr 1fr 1fr;
-        padding: 0px 50px 0px 50px;
         margin-top: -9.7rem; // Tamanho do titulo (soma das alturas do h1, h3 e margens do h1)
 
         #espaco-item1 {
-          height: 100%;
           grid-column: 1;
           grid-row: 1/4;
           grid-row-start: 2;
+          max-width: 100%;        
         }
         #espaco-item2 {
-          height: 100%;
           grid-column: 2;
           grid-row: 1/3;
+          max-width: 100%;        
         }
         #espaco-item3 {
-          height: 30vh;
           grid-row: 3/4;
           grid-column: 2;
+          max-width: 100%;        
         }
       }
     }
     // espaco
 
     .depoimentos{
+      .depoimento-card{
+        .depoimento-card-conteudo{
+          font-size: 1.7rem;
+        }
+        .depoimento-card-autor{
+          font-size: 1.7rem;
+        }
+      }
       .depoimentos-slider{
-        margin: 100px 0 100px 0;
+        margin: 125px 0 100px 0;
         font-size: 1.5rem;
       }
       .swiper-pagination{
@@ -597,6 +605,19 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
       }
     }
     // banner
+    .depoimentos{
+      .depoimentos-slider{
+        .depoimento-card{
+          .depoimento-card-conteudo{
+            font-size: 2rem;
+          }
+          .depoimento-card-autor{
+            font-size: 2rem;
+          }
+        }
+      }
+    }
+    // depoimentos
     .contato {
       height: auto;
       .row{
@@ -667,14 +688,17 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
         }
       }
     }
-    .banner .container-video{
-      .row{
-        h2{
-          font-size: 5rem;
-        }
-        p{
-          font-size: 2rem;
-          margin: 20% 0;
+    .banner{
+      padding: 25px 0;
+      .container-video{
+        .row{
+          h2{
+            font-size: 6rem;
+          }
+          p{
+            font-size: 2rem;
+            margin: 20% 0;
+          }
         }
       }
     }
