--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11747,7 +11747,6 @@ h2 {
   top: 0;
   left: 0;
   background-size: cover;
-  mix-blend-mode: multiply;
   z-index: 0;
 }
 .banner .row, .banner-topo .row {
@@ -12562,9 +12561,6 @@ footer {
   text-align: left;
   margin: 50px 0px;
 }
-footer .row {
-  text-align: center;
-}
 footer .row #logo-footer {
   width: 60%;
   margin-bottom: 50px;
@@ -12577,14 +12573,11 @@ footer .row ul li {
   font-size: 1.5rem;
 }
 footer .row ul li img {
-  width: 50px;
-  height: 30px;
-  object-fit: contain;
   margin-right: 15px;
 }
 
 .barra-footer {
-  height: 100px;
+  height: 50px;
   background-color: #2b3240;
   align-items: center;
 }
@@ -12613,16 +12606,13 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   footer {
     margin: 80px 0px;
   }
-  footer .row {
-    align-items: center;
-  }
   footer .row #logo-footer {
     width: 300px;
   }
-
-  .barra-footer {
-    height: 150px;
+  footer .row li:first-child {
+    margin-top: 0px;
   }
+
   .barra-footer #privacidade-wrapper {
     text-align: left;
   }
@@ -13726,6 +13716,7 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   padding-left: 0;
   font-size: 3rem;
   line-height: normal;
+  font-weight: 400;
 }
 .titulo h3 {
   font-size: 1.5rem;
@@ -13742,8 +13733,9 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   display: inline-block;
   position: absolute;
   left: -90px;
+  top: 3px;
   width: 80px;
-  height: 1.5rem;
+  height: 10px;
   background-color: #f0d47c;
 }
 
@@ -13762,13 +13754,9 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
     line-height: normal;
     font-size: 4rem;
   }
-  .titulo h3 {
-    font-size: 1.5rem;
-  }
   .titulo::before {
     left: -170px;
     width: 150px;
-    height: 1.5rem;
   }
 }
 /*
@@ -13786,16 +13774,12 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
     font-size: 4.5rem;
     line-height: normal;
   }
-  .titulo h3 {
-    font-size: 1.4rem;
-  }
   .titulo::before {
     content: "";
     display: inline-block;
     position: absolute;
     left: -100px;
     width: 80px;
-    height: 1.4rem;
     background-color: #f0d47c;
   }
 }
@@ -13930,13 +13914,13 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
 .page-home .banner .container-video .row h2, .page-home .banner-topo .container-video .row h2 {
   margin-top: 10%;
   font-weight: 400;
-  color: #ffffff;
+  color: #000;
   font-size: 3.5rem;
 }
 .page-home .banner .container-video .row p, .page-home .banner-topo .container-video .row p {
   margin: 10% 0;
   font-size: 1.5rem;
-  color: #ffffff;
+  color: #000;
 }
 .page-home .banner .container-video .row p img, .page-home .banner-topo .container-video .row p img {
   margin-right: 15px;
@@ -13951,12 +13935,14 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   gap: 30px;
 }
 .page-home .espaco #espaco-wrapper img {
-  width: 100%;
-  height: auto;
+  max-width: 100%;
   object-fit: cover;
 }
+.page-home .depoimentos {
+  padding: 10vh 0;
+}
 .page-home .depoimentos .depoimentos-slider {
-  margin-top: 5vh 0 5vh 0;
+  margin-top: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13972,18 +13958,19 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   flex-direction: row;
 }
 .page-home .depoimentos .depoimentos-slider .depoimento-card .depoimento-card-conteudo img {
+  width: 40px;
   height: 30px;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 .page-home .depoimentos .depoimentos-slider .depoimento-card .depoimento-card-autor {
-  text-align: center;
+  margin-left: 70px;
 }
 .page-home .depoimentos .depoimentos-slider .depoimento-card .depoimento-card-autor::before {
   content: "";
   display: inline-block;
   position: static;
   margin: 0px 10px 5px 0px;
-  width: 50px;
+  width: 20%;
   height: 5px;
   background-color: #f0d47c;
 }
@@ -14171,27 +14158,32 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   }
   .page-home .espaco #espaco-wrapper {
     grid-template-rows: 1fr 1fr 1fr;
-    padding: 0px 50px 0px 50px;
     margin-top: -9.7rem;
   }
   .page-home .espaco #espaco-wrapper #espaco-item1 {
-    height: 100%;
     grid-column: 1;
     grid-row: 1/4;
     grid-row-start: 2;
+    max-width: 100%;
   }
   .page-home .espaco #espaco-wrapper #espaco-item2 {
-    height: 100%;
     grid-column: 2;
     grid-row: 1/3;
+    max-width: 100%;
   }
   .page-home .espaco #espaco-wrapper #espaco-item3 {
-    height: 30vh;
     grid-row: 3/4;
     grid-column: 2;
+    max-width: 100%;
+  }
+  .page-home .depoimentos .depoimento-card .depoimento-card-conteudo {
+    font-size: 1.7rem;
+  }
+  .page-home .depoimentos .depoimento-card .depoimento-card-autor {
+    font-size: 1.7rem;
   }
   .page-home .depoimentos .depoimentos-slider {
-    margin: 100px 0 100px 0;
+    margin: 125px 0 100px 0;
     font-size: 1.5rem;
   }
   .page-home .depoimentos .swiper-pagination {
@@ -14332,6 +14324,12 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
   .page-home .banner .container-video .row p img, .page-home .banner-topo .container-video .row p img {
     height: 100%;
   }
+  .page-home .depoimentos .depoimentos-slider .depoimento-card .depoimento-card-conteudo {
+    font-size: 2rem;
+  }
+  .page-home .depoimentos .depoimentos-slider .depoimento-card .depoimento-card-autor {
+    font-size: 2rem;
+  }
   .page-home .contato {
     height: auto;
   }
@@ -14387,8 +14385,11 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
     padding-left: 100px;
     padding-right: 5%;
   }
+  .page-home .banner, .page-home .banner-topo {
+    padding: 25px 0;
+  }
   .page-home .banner .container-video .row h2, .page-home .banner-topo .container-video .row h2 {
-    font-size: 5rem;
+    font-size: 6rem;
   }
   .page-home .banner .container-video .row p, .page-home .banner-topo .container-video .row p {
     font-size: 2rem;
