--- a/_partials/_layouts/_footer.scss
+++ b/_partials/_layouts/_footer.scss
@@ -4,7 +4,6 @@ footer{
     margin: 50px 0px;
     .row{
       #logo-footer{
-        width: 60%;
         margin-bottom: 50px;
       }
       ul{
@@ -15,6 +14,9 @@ footer{
           img{
             margin-right: 15px;
           }
+        }
+        li:first-child{
+          margin-top: 0px;
         }
       }
     }
@@ -51,7 +53,7 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
         margin: 80px 0px;
         .row{
           #logo-footer{
-            width: 300px;
+            margin-bottom: 0px;
           }
           li:first-child{
             margin-top: 0px;
