--- a/_partials/_pages/_home.scss
+++ b/_partials/_pages/_home.scss
@@ -257,7 +257,6 @@
       resize: none;
       background-color: transparent;
       color: white;
-      border-radius: 5px;
       box-shadow: none;
       border: none;
       border-bottom: $secondary solid 2px;
@@ -271,7 +270,7 @@
       }
     }
     .btn-wrapper {
-      button {
+      input {
         width: 100%;
         padding: 15px;
         border: none;
@@ -476,7 +475,7 @@ Read more: https://getbootstrap.com/docs/4.6/layout/overview/#responsive-breakpo
             .btn-wrapper {
               width: 100%;
               text-align: right;
-              button {
+              input {
                 width: 30%;
               }
             }
